--- a/src/App.css
+++ b/src/App.css
@@ -213,6 +213,7 @@ textarea.inputError {
 @media (max-width: 768px) {
     form {
         width: 90%;
+        box-shadow: none;
     }
 
     #fullName {
